--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,8 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "movie";
+@import "buttons";
+@import "tags";
+@import "cover";
+@import "cards"
