--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,120 @@
+// .navbar-lewagon {
+//   justify-content: space-between;
+//   background: white;
+// }
+
+// .navbar-lewagon .navbar-collapse {
+//   flex-grow: 0;
+// }
+
+
 .navbar-lewagon {
-  justify-content: space-between;
-  background: white;
+  color: rgba(185, 185, 185, 0.8);
+}
+ul {
+  position: relative;
+  li {
+    list-style: none;
+    a {
+      position: relative;
+      display: block;
+      text-transform: uppercase;
+      margin: 20px 0;
+      padding: 10px 20px;
+      text-decoration: none;
+      color: #262626;
+      font-family: sans-serif;
+      font-size: 18px;
+      font-weight: 600;
+      transition: .5s;
+      z-index: 1;
+      &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-top: 2px solid #66A9B1;
+        border-bottom: 2px solid #66A9B1;
+        border-right: 2px solid #66A9B1;
+        border-left: 2px solid #66A9B1;
+        transform: scaleY(2);
+        opacity: 0;
+        transition: .3s;
+      }
+      &:after {
+        content: '';
+        position: absolute;
+        top: 2px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #ffffff;
+        transform: scale(0);
+        opacity: 0;
+        transition: .3s;
+        z-index: -1;
+      }
+      &:hover {
+        color: #fff;
+        &:before {
+          transform: scaleY(1);
+          opacity: 1;
+        }
+        &:after {
+          transform: scaleY(1);
+          opacity: 1;
+        }
+      }
+    }
+  }
+}
+.navbar-nav{
+  align-items: center;
+}
+.nav-link{
+  margin-right: 90px;
+
+}
+.avatar{
+  display:inline-block;
+  font-size:1em;
+  width:2.5em;
+  height:2.5em;
+  line-height:2.5em;
+  text-align:center;
+  border-radius:50%;
+  background:#04838F;
+  opacity: 70%;
+  vertical-align:middle;
+  color:white;
+  }
+
+
+.navbar-transparent {
+  background: #FDFDFD;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 35px;
+  color: rgba(185, 185, 185, 0.8);
 }
 
 .navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+
+  margin-right:30px;
+  justify-content: flex-end;
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 4rem;
+  height: 4rem;
+  background: url(image.png);
+  box-sizing: border-box;
+  backdrop-filter: blur(4px);
+  border-radius: 50%;
+  margin-left: 35px;
+}
+.container-fluid{
+  box-shadow: 0px 4px 16px -7px grey;
 }
