--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,13 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 offset-md-2">
-          <%= yield %>
+    <%= render 'shared/navbar' %>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            <%= yield %>
+          </div>
         </div>
       </div>
-    </div>
   </body>
 </html>
