--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,6 +1,7 @@
 .card-category {
   background-size: cover;
   background-position: center;
+  background-image: url(movie_card.jpg);
   height: 180px;
   display: flex;
   justify-content: center;
@@ -10,6 +11,7 @@
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  margin-bottom: 1em;
 }
 
 .card-large {
