--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -4,9 +4,9 @@
     <div class="col-12 col-md-6 offset-lg-3">
       <div class="bg-white rounded p-3 shadow">
         <h3>Add a movie to your <%= @list.name %> list</h3>
-        <%= simple_form_for [@list,@bookmark] do |f| %>
+        <%= simple_form_for [@list, @bookmark] do |f| %>
           <%= f.input :comment, placeholder: 'Enter a comment about the movie' %>
-          <%= f.association :movie, prompt: 'Select a movie' %>
+          <%= f.association :movie, collection: Movie.order('title ASC') %>
           <%= f.submit class: 'btn btn-flat' %>
         <% end %>
       </div>
