adding select2 with stimulus

--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -6,7 +6,7 @@
         <h3>Add a movie to your <%= @list.name %> list</h3>
         <%= simple_form_for [@list, @bookmark] do |f| %>
           <%= f.input :comment, placeholder: 'Enter a comment about the movie' %>
-          <%= f.association :movie, collection: Movie.order('title ASC') %>
+          <%= f.association :movie, collection: Movie.order('title ASC'), input_html: { data: { controller: 'select2' }} %>
           <%= f.submit class: 'btn btn-flat' %>
         <% end %>
       </div>
